add main section

--- a/main.html
+++ b/main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="global.css">
     <title>InnpvateAI</title>
 </head>
+
 <body>
 
 
@@ -35,9 +37,35 @@
                 </nav>
             </div>
         </header>
-        <main></main>
+        <main>
+            <section class="aiInternet">
+                <div class="ai-photo">
+                    <img src="./images/image1.png" alt="card">
+                </div>
+                <div class="ai-info">
+                    <h1 class="heading">The AI Layer for the new internet</h1>
+                    <span class="heading-span">Build decentralized AI agents, smart contracts, and intelligent dapps
+                        with Eternal AI-on your favorite blockchain.</span>
+                    <div class="info-buttons">
+                        <button class="create-btn">Create your dagent</button>
+                        <button class="get-btn">Get AAI</button>
+                    </div>
+                    <span class="heading-span-2">The world’s best blockchains. AI-powerd</span>
+                    <div class="socials">
+                        <img src="./images/jira.svg" alt="jira">
+                        <img src="./images/notion.svg" alt="notion">
+                        <img src="./images/slack.svg" alt="slack">
+                        <img src="./images/dropbox.svg" alt="dropbox">
+                    </div>
+                </div>
+            </section>
+            <section class="EternalAI">
+                <h2 class="ai-heading">Create, innovate Build with Eternal AI</h2>
+            </section>
+        </main>
         <footer></footer>
     </div>
-    
+
 </body>
+
 </html>
