add finally version

--- a/main.html
+++ b/main.html
@@ -293,7 +293,7 @@
                 <div class="subscribe">
                     <form class="form">
                         <input type="email" placeholder="Enter your email" id="email" name="email">
-                        <button class="subscribe-btn">Subscribe</button>
+                        <button type="submit" class="subscribe-btn">Subscribe</button>
                     </form>
                     <p class="subscribe-text">We care about your data in our <span>privacy policy</span>.</p>
 
